--- a/server/src/main/resources/server.properties
+++ b/server/src/main/resources/server.properties
@@ -1,4 +1,9 @@
 # кол-во потоков для работы на сервере, если 0, то значит по умолчанию
-thread.count = 0
+server.threads = 0
+# номер порта на котором работает сервер
+server.port =  10000
 # размер буфера в байтах пересылаемых частей файла
-buffer.size = 102400
+server.bufferSize = 1024
+# папка на сервере в которой хранятся все документы пользователей
+server.storageDirectory = users
+
