--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <modules>
         <module>server</module>
         <module>client</module>
-        <module>SimpleProtocol</module>
+        <module>protocol</module>
     </modules>
 
     <properties>
